[tool.poetry]
name = "capture_handler_test"
version = "0.1.0"
description = ""
authors = ["David Bruce <djb@ragnarok.net>"]

[tool.poetry.dependencies]
python = "^3.8"
aws-lambda-powertools = "^1.13.0"
mypy = "^0.812"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
